--- a/demo.yml
+++ b/demo.yml
@@ -9,15 +9,15 @@ app:
 
 server:
   port: 8081
-  ssl:
-    enabled: true
-    key-store: classpath:keystore/server.jks
-    key-store-password: certificate
-    key-alias: localhost
-    trust-store: classpath:keystore/trust.jks
-    trust-store-password: password
-    key-store-type: JKS
-    trust-store-type: JKS
+#  ssl:
+#    enabled: true
+#    key-store: classpath:keystore/server.jks
+#    key-store-password: certificate
+#    key-alias: localhost
+#    trust-store: classpath:keystore/trust.jks
+#    trust-store-password: password
+#    key-store-type: JKS
+#    trust-store-type: JKS
 
 
 
