--- a/demo.yml
+++ b/demo.yml
@@ -55,9 +55,9 @@ spring:
       service-url:
         defaultZone: https://localhost:8761/eureka/
       fetch-registry: true
-      register-with-eureka: true
+      register-with-eureka: false
     instance:
-      secure-port-enabled: true
+      secure-port-enabled: false
 
   logging:
     level:
