--- a/demo.yml
+++ b/demo.yml
@@ -53,11 +53,11 @@ spring:
   eureka:
     client:
       service-url:
-        defaultZone: https://localhost:8761/eureka/
+        defaultZone: http://localhost:8761/eureka/
       fetch-registry: true
-      register-with-eureka: false
+      register-with-eureka: true
     instance:
-      secure-port-enabled: false
+      secure-port-enabled: true
 
   logging:
     level:
