--- a/demo.yml
+++ b/demo.yml
@@ -53,7 +53,7 @@ spring:
   eureka:
     client:
       service-url:
-        defaultZone: http://localhost:8761/eureka/
+        defaultZone: https://localhost:8761/eureka/
       fetch-registry: true
       register-with-eureka: true
     instance:
